[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "surface_board_game"
version = "0.0.1"
description = "Surface code PhD hat game"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "Adafruit-Blinka",
    "adafruit-circuitpython-neopixel",
    "adafruit-circuitpython-ssd1306",
    "numpy",
    "Pillow",
    "RPi.GPIO",    
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
